<resources>
    <string name="app_name">mall</string>


    <!-- 通用的 -->
    <string name="common_phone_input_hint">输入手机号</string>
    <string name="common_phone_input_error">手机号输入不正确</string>

    <string name="common_password_input_error">请输入密码</string>
    <string name="common_password_input_unlike">两次密码输入不一致，请重新输入</string>

    <string name="common_username_input_hint">输入用户名</string>
    <string name="common_code_input_hint">输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>
    <string name="common_code_error_hint">验证码错误，请检查输入</string>

    <string name="common_step_next">下一步</string>
    <string name="common_step_complete">完成</string>
    <string name="common_step_commit">提交</string>

    <string name="common_permission_hint">请先授予权限</string>
    <string name="common_permission_fail">授权失败，请手动授予权限</string>

    <string name="common_loading">加载中&#8230;</string>

    <string name="common_confirm">确定</string>
    <string name="common_cancel">取消</string>

    <string name="common_save">保存</string>

    <string name="common_year">年</string>
    <string name="common_month">月</string>
    <string name="common_day">日</string>

    <string name="common_hour">时</string>
    <string name="common_minute">分</string>
    <string name="common_second">秒</string>

    <string name="common_network">当前没有网络连接，请检查网络设置</string>

    <!-- 提示布局 -->
    <string name="hint_layout_no_data">空空如也</string>
    <string name="hint_layout_error_request">请求出错，点击重试</string>
    <string name="hint_layout_error_network">网络错误，点击重试</string>


    <!-- 主页 -->
    <string name="home_exit_hint">再按一次退出</string>
    <string name="home_nav_index">首页</string>
    <string name="home_nav_category">分类</string>
    <string name="home_nav_car">购物车</string>
    <string name="home_nav_me">我的</string>
    <string name="home_goods_detail">商品详情</string>


    <!-- 网络请求 -->
    <string name="http_loading">加载中&#8230;</string>

    <string name="http_unknown_error">请求出错，未知错误</string>
    <string name="http_account_error">账号异常，请重新登录</string>
    <string name="http_data_explain_error">数据解析异常，请稍后</string>
    <string name="http_server_out_time">服务器请求超时，请稍后再试</string>
    <string name="http_network_error">请求失败，请检查网络设置</string>
    <string name="http_response_error">服务器响应异常，请稍后再试</string>
    <string name="http_server_error">服务器连接异常，请稍后再试</string>
    <string name="http_request_cancel">请求被中断，请重试</string>

    <!-- 登录 -->
    <string name="login_register">注册</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_text">登录</string>
    <string name="login_other">其他登录方式</string>
    <string name="login_not">还没有登录</string>
    <string name="logout_text">退出登录</string>


    <!-- 注册 -->
    <string name="register_title">注册</string>
    <string name="register_hint">手机号仅用于登录和保护账号安全</string>
    <string name="register_password_hint1">设置6&#8211;18位登录密码</string>
    <string name="register_password_hint2">请再次输入一次密码</string>
    <string name="register_succeed">注册成功</string>


    <!-- 我的 -->
    <string name="my_coupon">优惠券</string>
    <string name="my_collect">收藏</string>
    <string name="my_footer">足迹</string>
    <string name="my_group">拼团</string>
    <string name="my_address">地址</string>
    <string name="my_bindphone">绑定手机</string>
    <string name="my_contact_service">联系客服</string>
    <string name="my_aboutus">关于我们</string>

    <string name="my_orders">我的订单</string>
    <string name="my_shop">微商城</string>
    <string name="my_check_allorder">查看全部订单</string>
    <string name="my_topay">待付款</string>
    <string name="my_tosend">待发货</string>
    <string name="my_toreceive">待收货</string>
    <string name="my_tojudge">待评价</string>
    <string name="my_toservice">去售后</string>

    <string name="my_address_title">收获地址</string>
    <string name="my_address_edit">编辑地址</string>
    <string name="my_address_name">姓名</string>
    <string name="my_address_phone">电话</string>
    <string name="my_address_code">邮编</string>
    <string name="my_address_localtion">地区</string>
    <string name="my_address_detail">详细地址</string>
    <string name="my_address_default">设为默认收获地址</string>
    <string name="my_address_name_hint">收货人姓名</string>
    <string name="my_address_phone_hint">收货人手机号</string>
    <string name="my_address_code_hint">收货人邮编</string>
    <string name="my_address_localtion_hint">选择省/市／区</string>
    <string name="my_address_detail_hint">街道门牌、楼层房间号等信息</string>
    <string name="my_address_name_tip">请输入收货人姓名</string>
    <string name="my_address_phone_tip">请输入收货人手机好</string>
    <string name="my_address_code_tip">请输入收货人邮编</string>
    <string name="my_address_localtion_tip">请选择省/市／区</string>
    <string name="my_address_detail_tip">请输入街道门牌、楼层房间号等信息</string>
    <string name="my_address_delete_tip">删除地址？</string>

    <string name="my_coupon_title">我的优惠券</string>

    <string name="my_check_goodcount">商品金额</string>
    <string name="my_check_postage">邮费</string>
    <string name="my_check_tips">订单备注</string>

    <!-- 购物车 -->
    <string name="cart_tip1">30天无忧退货</string>
    <string name="cart_tip2">48小时快速退款</string>
    <string name="cart_tip3">满88元免邮费</string>


    <!-- 地区对话框 -->
    <string name="address_title">请选择地区</string>
    <string name="address_hint">请选择</string>


</resources>