<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_fafafa"
    android:gravity="center">

    <com.hjq.bar.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:backButton="false"
        app:lineVisible="false"
        app:title="@string/home_nav_me" />

    <androidx.core.widget.NestedScrollView
        android:layout_below="@id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/dp_5"
            android:paddingRight="@dimen/dp_5"
            android:orientation="vertical">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/white"
                android:layout_height="200dp">


                <ImageView
                    android:id="@+id/iv_avatar"
                    android:layout_width="@dimen/dp_50"
                    android:layout_height="@dimen/dp_50"
                    android:src="@drawable/ic_shop"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_20"
                    />

                <TextView
                    android:id="@+id/tv_nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="昵称"
                    android:layout_below="@id/iv_avatar"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/dp_20"
                    android:textStyle="bold"
                    android:textSize="@dimen/sp_18"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/dp_10"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/me_card_round_bg">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_shop"
                        android:textSize="@dimen/sp_14"
                        android:textColor="@color/white"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:src="@drawable/ic_right_arrow"/>

                </RelativeLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/white"
                android:orientation="vertical">

                <com.hjq.widget.layout.SettingBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:bar_leftText="@string/my_orders"
                    app:bar_rightHint="@string/my_check_allorder"
                    app:bar_rightIcon="@drawable/ic_right_arrow"
                    app:bar_lineSize="1px"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/dp_5"
                    android:paddingBottom="@dimen/dp_5"
                    android:orientation="horizontal">


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_topay"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_4"
                            android:text="@string/my_topay"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_sendgoods"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_3"
                            android:text="@string/my_tosend"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_receivegood"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_3"
                            android:text="@string/my_toreceive"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_judge"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_3"
                            android:text="@string/my_tojudge"/>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="5dp"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_aftermarket"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/dp_3"
                            android:text="@string/my_toservice"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>


            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_coupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/my_coupon"
                android:layout_marginTop="@dimen/dp_15"
                app:bar_leftIcon="@drawable/ic_coupon"
                app:bar_rightIcon="@drawable/ic_right_arrow" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_collect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/my_collect"
                app:bar_leftIcon="@drawable/ic_collect"
                app:bar_rightIcon="@drawable/ic_right_arrow" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/my_footer"
                app:bar_leftIcon="@drawable/ic_footer"
                app:bar_rightIcon="@drawable/ic_right_arrow" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_goup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/my_group"
                app:bar_leftIcon="@drawable/ic_group"
                app:bar_rightIcon="@drawable/ic_right_arrow" />


            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:bar_leftText="@string/my_address"
                app:bar_leftIcon="@drawable/ic_address"
                app:bar_rightIcon="@drawable/ic_right_arrow" />


            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_bindphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/my_bindphone"
                app:bar_leftIcon="@drawable/ic_phone"
                app:bar_rightIcon="@drawable/ic_right_arrow" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_contactservice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftIcon="@drawable/ic_service"
                app:bar_leftText="@string/my_contact_service"
                app:bar_rightIcon="@drawable/ic_right_arrow" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_aboutus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/my_aboutus"
                app:bar_leftIcon="@drawable/ic_about"
                app:bar_rightIcon="@drawable/ic_right_arrow" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_logout"
                style="@style/ButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_save_selector"
                android:text="@string/logout_text" />

        </LinearLayout>

</androidx.core.widget.NestedScrollView>

</RelativeLayout>